// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expense Summary Component should render properly with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 2 expenses totalling $0.20
  </h2>
</div>
`;

exports[`Expense Summary Component should render properly with no expenses 1`] = `
<div>
  <h2>
    Viewing 0 expenses totalling $0.00
  </h2>
</div>
`;

exports[`Expense Summary Component should render properly with one expense 1`] = `
<div>
  <h2>
    Viewing 1 expense totalling $0.10
  </h2>
</div>
`;
